[package]
name = "lupt"
version = "0.2.0"
description = "Chat app for lupt(लुप्त) users!"
authors = ["Piyush Raj <piyush.raj.kit@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/PiyushXCoder/lupt"
homepage = "https://luptchat.in"
keywords = ["chat", "Chatting", "Talk", "Stranger"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = { version = "3", features = ["rustls"] }
actix-web-actors = "3"
actix-broker = "0.3"
actix-files = "0.5"
actix-ratelimit = "0.3"
env_logger = "0.9"
openssl = "0.10"

clap = { version = "4", features = ["derive"] }
lazy_static = "1.4"

serde = "1.0"
serde_json = "1.0"
rand = "0.8"
tokio = { version = "1.5", features = ['rt', 'rt-multi-thread', 'macros'] }

sha2 = "0.10"
base64 = "0.13"
log = "0.4.17"
rustls = "0.18.0"
rustls-pemfile = "1.0.2"
anyhow = { version = "1.0.71", features = ["backtrace"] }
