[package]
name = "lupt"
version = "0.2.0"
description = "Chat app for lupt(लुप्त) users!"
authors = ["Piyush Raj <piyush.raj.kit@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/PiyushXCoder/lupt"
homepage = "https://luptchat.in"
keywords = ["chat", "Chatting", "Talk", "Stranger"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = { version = "4", features = ["rustls"] }
actix-web-actors = "4"
actix-broker = "0.4"
actix-files = "0.6"
awc = "3.1"
env_logger = "0.10"
openssl = "0.10"

clap = { version = "4", features = ["derive"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
rand = "0.8"
futures = "0.3"

sha2 = "0.10"
base64 = "0.21"
log = "0.4"
rustls = "0.20"
rustls-pemfile = "1.0.2"
anyhow = { version = "1.0.71", features = ["backtrace"] }
